--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
@@ -11,9 +11,9 @@
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
 
-@using DataBase
-@using Cliente
 @using System.Security.Claims
+@using Shares.Genericos
+@using Shares.SeguridadToken
  @inject ITokenService TokenService
 @inject IContextProvider ContextProvider 
 
