--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/LoginToken.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/LoginToken.razor
@@ -1,7 +1,7 @@
 ﻿@page "/LoginToken"
 @rendermode InteractiveServer
-@using DataBase
-@using Cliente
+
+@using Shares.Genericos
 
 @inject IHttpClientFactory HttpFactory
 @inject IContextProvider ContextProvider
