--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/Weather.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/Weather.razor
@@ -1,6 +1,6 @@
 ﻿@page "/weather"
-@using DataBase
-@using Cliente
+
+@using Shares.Genericos
 @* @attribute [StreamRendering] *@
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 @inject IContextProvider ContextProvider
