--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
@@ -192,8 +192,8 @@
         await ContextProvider.UpdateTokenContext(token);
         
 
-        // Logger.LogInformation("User logged in.");
-        // RedirectManager.RedirectTo(ReturnUrl);
+        Logger.LogInformation("User logged in.");
+        RedirectManager.RedirectTo(ReturnUrl);
     }
     
 
