--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Counter.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Counter.razor
@@ -26,7 +26,7 @@ servidor:@estadoServidor
         currentCount++;
 
         // 4. Persistir de nuevo en el contexto
-        ContextProvider.SetClaveValor(ClavesEstado.PaginaCliente, "COUNTER = " + currentCount.ToString());
+        ContextProvider.SetClaveValor(ClavesEstado.PaginaCliente, "COUNTER=" + currentCount.ToString());
         await ContextProvider.UpdateEstadoContext();
     }
 
@@ -53,7 +53,7 @@ servidor:@estadoServidor
         ContextProvider.OnContextChanged += HandleContextChanged;
 
         // 2. Inicializar desde localStorage (JS interop seguro aquí)
-        await ContextProvider.ReadAllContext();
+        await ContextProvider.ReadAllContext(true);
 
         // 3. Leer estado actual
         estadoServidor = ContextProvider.GetValor(ClavesEstado.PaginaServidor) ?? "Ninguno";
