MREFRACTORIZACION DEL CODIGO

--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Counter.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Counter.razor
@@ -1,5 +1,6 @@
 ﻿@page "/counter"
 @using Shares.Genericos
+@using Shares.Seguridad
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender: false))
 
 
