--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/LoginToken.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/LoginToken.razor
@@ -2,6 +2,7 @@
 @rendermode InteractiveServer
 
 @using Shares.Genericos
+@using Shares.Seguridad
 
 @inject IHttpClientFactory HttpFactory
 @inject IContextProvider ContextProvider
