--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/Weather.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/Weather.razor
@@ -1,6 +1,7 @@
 ﻿@page "/weather"
 
 @using Shares.Genericos
+@using Shares.Seguridad
 @* @attribute [StreamRendering] *@
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 @inject IContextProvider ContextProvider
