--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/ListaUsuariosCliente.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/ListaUsuariosCliente.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Authorization
 @using Shares.Genericos
 @using Shares.Modelo
+@using Shares.Seguridad
 @using Shares.Servicios
 
 @inject IUnitOfWorkFactory UnitOfWorkFactory
@@ -141,7 +142,7 @@ else
 
             scUsuario ??= new ServicioUsuariosCliente(ContextProvider, UnitOfWorkFactory);
 
-            var list = await scUsuario.GetAllAsync();
+            var list = await scUsuario.ObtenerTodosAsync();
             usuarios = list.ToList();
 
             await InvokeAsync(StateHasChanged);
