--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
@@ -13,6 +13,7 @@
 
 @using System.Security.Claims
 @using Shares.Genericos
+@using Shares.Seguridad
 @using Shares.SeguridadToken
  @inject ITokenService TokenService
 @inject IContextProvider ContextProvider 
