actualizar codigo que funciona

--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/ListaUsuariosCliente.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/ListaUsuariosCliente.razor
@@ -25,6 +25,7 @@ servidor:@estadoServidor
 }
 else
 {
+    <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
     <p>TenantId <strong>@ContextProvider._AppState.TenantId</strong>:</p>
     <p>ContextKeDb <strong>@ContextProvider._AppState.DbKey</strong>:</p>
     <p>Mode <strong>@ContextProvider._AppState.ConnectionMode</strong>:</p>
@@ -78,7 +79,7 @@ else
 
 @code {
 
-
+    int currentCount = 0;
     private bool _initialized;
     private bool _isInitializing;
     private string estadoCliente = "";
@@ -111,7 +112,7 @@ else
 
 
         // 4. Persistir de nuevo en el contexto
-    
+
         await ContextProvider.UpdateEstadoContext();
 
         _initialized = true;
@@ -149,14 +150,22 @@ else
         }
         catch (Exception ex)
         {
-            Console.WriteLine("EX: " + ex.GetType().FullName);
-            Console.WriteLine(ex.ToString());
-            Console.WriteLine("INNER: " + ex.InnerException?.GetType().FullName);
-            Console.WriteLine(ex.InnerException?.ToString());
+
             throw;
         }
     }
 
+
+    private async void IncrementCount()
+    {
+
+        currentCount++;
+        // 4. Persistir de nuevo en el contexto
+        ContextProvider.SetClaveValor(ClavesEstado.PaginaCliente, "COUNTER=" + currentCount.ToString());
+        var list = await scUsuario.ObtenerTodosAsync(false);
+        usuarios = list.ToList();
+        await ContextProvider.UpdateEstadoContext();
+    }
   
 
     public void Dispose()
