--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/App.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/App.razor
@@ -17,6 +17,9 @@
 <body>
     <Routes />
     <ReconnectModal />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="..."
+            crossorigin="anonymous"></script>
     <script src="@Assets["_framework/blazor.web.js"]"></script>
     <script src="@Assets["Components/Account/Shared/PasskeySubmit.razor.js"]" type="module"></script>
 </body>
