--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/NavMenu.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/NavMenu.razor
@@ -1,6 +1,7 @@
 ﻿@implements IDisposable
 
 @inject NavigationManager NavigationManager
+@using Microsoft.AspNetCore.Components.Authorization
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -9,6 +10,35 @@
 </div>
 
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+
+<!-- Menú de administración solo autorizados-->
+
+<AuthorizeView >
+    <Authorized>
+<div class="nav-item px-3">
+    <div class="nav-link" @onclick="ToggleAdminMenu">
+        <span class="oi oi-lock-locked" aria-hidden="true"></span>
+        Administración
+    </div>
+
+    @if (adminMenuExpanded)
+    {
+        <div class="nav-item px-4">
+            <NavLink class="nav-link" href="/users">
+                <span class="oi oi-people" aria-hidden="true"></span>
+                Usuarios
+            </NavLink>
+        </div>
+        <div class="nav-item px-4">
+            <NavLink class="nav-link" href="/roles">
+                <span class="oi oi-key" aria-hidden="true"></span>
+                Roles
+            </NavLink>
+        </div>       
+    }
+</div>
+    </Authorized>
+</AuthorizeView>
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
@@ -71,6 +101,10 @@
 
 @code {
     private string? currentUrl;
+    private bool adminMenuExpanded = true;
+
+    private void ToggleAdminMenu()
+        => adminMenuExpanded = !adminMenuExpanded;
 
     protected override void OnInitialized()
     {
