--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/Home.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/Home.razor
@@ -2,6 +2,17 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<AuthorizeView>
+    <Authorized Context="auth">
+        <div class="nav-item px-3 text-muted small">
+            Usuario: @auth.User.Identity?.Name
+        </div>
+        @* Ejemplo simple: comprobar si es Admin *@
+        @if (auth.User.IsInRole("Admin"))
+        {
+            <div class="nav-item px-3 text-muted small">
+                Rol: Admin
+            </div>
+        }
+    </Authorized>
+</AuthorizeView>
