leyendo de los datos de seguridad del usuaior el tenen y el context .. !!  y funciona perfectamente !!

--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
@@ -190,7 +190,7 @@
         var token = TokenService.GenerateToken(userClaims);
 
         // guardar token y limpiar estado en tu ContextProvider para toda la app
-        await ContextProvider.UpdateTokenContext(token);
+        await ContextProvider.UpdateContextFromToken(token);
         
 
         Logger.LogInformation("User logged in.");
