--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/NavMenu.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/NavMenu.razor
@@ -1,8 +1,22 @@
 ﻿@implements IDisposable
-
 @inject NavigationManager NavigationManager
 @using Microsoft.AspNetCore.Components.Authorization
+@using Shares.Seguridad
+@inject IContextProvider ContextProvider
+@inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Antiforgery
+@inject IHttpContextAccessor HttpContextAccessor
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
 
+
+
+@functions {
+    string GetAntiforgeryToken()
+    {
+        var http = HttpContextAccessor.HttpContext!;
+        var tokens = Antiforgery.GetAndStoreTokens(http);
+        return tokens.RequestToken!;
+    }
+}
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">BlazorSeguridad2026</a>
@@ -16,6 +30,8 @@
 <AuthorizeView >
     <Authorized>
 <div class="nav-item px-3">
+    
+    
     <div class="nav-link" @onclick="ToggleAdminMenu">
         <span class="oi oi-lock-locked" aria-hidden="true"></span>
         Administración
@@ -28,14 +44,41 @@
                 <span class="oi oi-people" aria-hidden="true"></span>
                 Usuarios
             </NavLink>
-        </div>
-        <div class="nav-item px-4">
+
             <NavLink class="nav-link" href="/roles">
                 <span class="oi oi-key" aria-hidden="true"></span>
                 Roles
             </NavLink>
-        </div>       
-    }
+ 
+                    <div class="d-flex flex-column gap-2">
+                        <div class="d-flex align-items-center gap-2">
+                            <select class="form-select form-select-sm w-auto" @bind="SelectedDbKey">
+                                @foreach (var opcion in ContextProvider.GetContextDbKeys())
+                                {
+                                    <option value="@opcion">@opcion</option>
+                                }
+                            </select>
+
+                            <select class="form-select form-select-sm w-auto" @bind="SelectedTenantId">
+                                @foreach (var opcion in ContextProvider.GetTenantIds())
+                                {
+                                    <option value="@opcion">@opcion</option>
+                                }
+                            </select>
+                        </div>
+
+                        <div>
+                            <button type="button"
+                                    class="btn btn-primary btn-sm"
+                                    @onclick="Actualizar">
+                                Actualizar
+                            </button>
+                        </div>
+                    </div>
+
+
+         </div>
+     }
 </div>
     </Authorized>
 </AuthorizeView>
@@ -59,6 +102,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ListaUsuarios">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista Usuarios
+            </NavLink>
+        </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="auth">
@@ -73,14 +121,12 @@
                         <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
                     </NavLink>
                 </div>
-                <div class="nav-item px-3">
-                    <form action="Account/Logout" method="post">
-                        <AntiforgeryToken />
-                        <input type="hidden" name="ReturnUrl" value="@currentUrl" />
-                        <button type="submit" class="nav-link">
+                <div class="nav-item px-3">                    
+                 
+                        <NavLink class="nav-link" href="Logout">
                             <span class="bi bi-arrow-bar-left-nav-menu" aria-hidden="true"></span> Logout
-                        </button>
-                    </form>
+                        </NavLink>
+                
                 </div>
             </Authorized>
             <NotAuthorized>
@@ -99,17 +145,47 @@
     </nav>
 </div>
 
+
+
 @code {
     private string? currentUrl;
-    private bool adminMenuExpanded = true;
+    private bool adminMenuExpanded = false;
+    int TenantId = 0;
 
     private void ToggleAdminMenu()
         => adminMenuExpanded = !adminMenuExpanded;
+
+    private int SelectedTenantId;
+    private string SelectedDbKey;
+
+
+    private async Task Actualizar()
+    {
+        ContextProvider._AppState.TenantId = SelectedTenantId;
+        ContextProvider._AppState.DbKey = SelectedDbKey;
+        await ContextProvider.SaveAllContextAsync(ContextProvider);
+        // Opcional: recargar toda la página
+        // NavigationManager.NavigateTo(NavigationManager.Uri, forceLoad: true);
+    }
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await ContextProvider.ReadAllContext();
+            SelectedTenantId = ContextProvider._AppState.TenantId ?? 0;
+            SelectedDbKey = ContextProvider._AppState.DbKey;
+        }
+
+    }
+
+    
 
     protected override void OnInitialized()
     {
         currentUrl = NavigationManager.ToBaseRelativePath(NavigationManager.Uri);
         NavigationManager.LocationChanged += OnLocationChanged;
+        SelectedTenantId = ContextProvider._AppState.TenantId ?? 0;
+        SelectedDbKey = ContextProvider._AppState.DbKey ?? "InMemory";
     }
 
     private void OnLocationChanged(object? sender, LocationChangedEventArgs e)
